<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="setpass">Set Passcode</string>
	<string name="add_mem">Add Family Member</string>
	<string name="app_name">Family Health Record</string>
	<string name="app_namehead">Family Health</string>
	<string name="record">Record</string>
	<string name="enterPassCode">Enter a passcode</string>
	<string name="erentertxt">Re-enter your Passcode</string>
	<string name="sendemail">
		Would you like to e-mail yourself a backup of your PIN?
		<br />
		If you lose it,you won\'t be able to access a Family Health Record.
	</string>
	<string name="emailhist">Email All Family Histories</string>
	<string name="deletehist">Delete All Family Histories</string>
	<string name="passhist">Passcode Lock</string>
	<string name="drophist">Dropbox</string>
	<string name="linkdrop">Link Dropbox</string>
	<string name="unlinkdrop">Unlink From Dropbox</string>
	<string name="backupdrop">Dropbox Backup</string>
	<string name="restdrop">Dropbox Restore</string>
	<string name="feedhist">Send Feedback</string>
	<string name="loading">Loading...</string>
	<string name="cancel">Cancel</string>
	<string name="invalidpasscode">The passcode you entered is incorrect. Please enter the correct passcode.</string>
	<string name="passcodedonotmatch">Passcodes do not match.</string>
	<string name="backuppassword">Backup Password</string>
	<string name="backuppasswordbody">Would you like to e-mail yourself a backup of your PIN?<br />If you lose it,you won\'t be able to access Family Health Record.</string>
	<string name="email">E-mail</string>
	<string name="edit">Edit</string>
	<string name="done">Done</string>
	<string name="choose">Choose</string>
	<string name="addsuccessFamilyMember">Family Member successfully added.</string>
	<string name="errInsertFamilyMem">Family Member could not be inserted. Please try again.</string>
	<string name="moveandscale">Move and Scale</string>
	<string name="validateinsertfamilymember">Please select an image and enter the first name of the family member.</string>
	<string name="updatesuccessFamilyMember">Family Member successfully updated.</string>
	<string name="errUpdateFamilyMem">Family Member could not be updated. Please try again.</string>
	<string name="takephoto">Take Photo</string>
	<string name="choosephoto">Choose Photo</string>
	<string name="choosefromlib">Choose From Library</string>
	<string name="medicalhistory">Medical History</string>
	<string name="back">Back</string>
	<string name="modules">Modules</string>
	<string name="chooseamodule">Choose a module to add to profile</string>
	<string name="addtext">Text</string>
	<string name="addphoto">Photo</string>
	<string name="addaudio">Audio</string>
	<string name="addfile">File</string>
	<string name="addvideo">Video</string>
	<string name="adddrawing">Drawing</string>
	<string name="markasnottaking">Mark As Not Taking</string>
	<string name="removenottakinglabel">Remove \'Not Taking\' Label</string>
	<string name="markasarchived">Mark As Archived</string>
	<string name="removearchivelabel">Remove \'Archived\' Label</string>
	<string name="title">Title</string>
	<string name="audionotetitle">Audio Note Title</string>
	<string name="videonotetitle">Video Note Title</string>
	<string name="imageadded">Image successfully added.</string>
	<string name="imagenotadded">Image could not be added. Please try again.</string>
	<string name="fileadded">File successfully added.</string>
	<string name="filenotadded">File could not be added. Please try again.</string>
	<string name="textadded">Text successfully added.</string>
	<string name="textnotadded">Text could not be added. Please try again.</string>
	<string name="soundadded">Audio successfully added.</string>
	<string name="soundnotadded">Audio could not be added. Please try again.</string>
	<string name="videoadded">Video successfully added.</string>
	<string name="videonotadded">Video could not be added. Please try again.</string>
	<string name="drawingadded">Drawing successfully added.</string>
	<string name="drawingnotadded">Drawing could not be added. Please try again.</string>
	<string name="fileupdated">File successfully updated.</string>
	<string name="filenotupdated">File could not be updated. Please try again.</string>
	<string name="imageupdated">File successfully updated.</string>
	<string name="imagenotupdated">File could not be updated. Please try again.</string>
	<string name="textupdated">Text successfully updated.</string>
	<string name="textnotupdated">Text could not be updated. Please try again.</string>
	<string name="soundupdated">Audio successfully updated.</string>
	<string name="soundnotupdated">Audio could not be updated. Please try again.</string>
	<string name="videoupdated">Video successfully updated.</string>
	<string name="videonotupdated">Video could not be updated. Please try again.</string>
	<string name="drawingupdated">Drawing successfully updated.</string>
	<string name="drawingnotupdated">Drawing could not be updated. Please try again.</string>
	<string name="stop">Stop</string>
	<string name="play">Play</string>
	<string name="message">Message</string>
	<string name="notrecording">Not recording</string>
	<string name="recording">Recording</string>
	<string name="playing">Playing</string>
	<string name="pleaseentertext">Please enter some text.</string>
	<string name="pleaseenteraudio">Please record some audio.</string>
	<string name="moduleitemnotarchived">Module item not archived.</string>
	<string name="moduleitemnotdeleted">Module item not deleted.</string>
	<string name="familymembernotdeleted">Family member not deleted.</string>
	<string name="moduleitemdeleted">Module item deleted.</string>
	<string name="moduleitemarchived">Module item archived.   </string>
	<string name="nottaking">Not Taking</string>
	<string name="archived">Archived</string>
	<string name="areyousuredeletefamily">Are you sure you want to delete this family member? This will delete all the records for the family member from the application and you will not be able to restore it from dropbox.</string>
	<string name="moduleitemremovearchived">Module item remove from archive.</string>
	<string name="moduleitemnottaking">Module item marked as not taking.   </string>
	<string name="moduleitemremovenottaking">Module item remove not taking.</string>
	<string name="settings">Settings</string>
	<string name="emailhistorydeleted">Email History Deleted</string>
	<string name="emailhistorynotdeleted">Email History not deleted. Please try again.</string>
	<string name="historydeleted">Family Histories Deleted</string>
	<string name="historynotdeleted">Family Histories not deleted. Please try again.</string>
	<string name="nohistoryavailable">No History Available</string>
	<string name="restorefamily">Restore Family Medical History</string>
	<string name="dropboxrestore">Dropbox Restore</string>
	<string name="notes">Notes</string>
	<string name="pics">pics</string>
	<string name="voice">voice</string>
	<string name="backedupon">Backed up on:</string>
	<string name="backupsuccessful">Backup successful</string>
	<string name="backupunsuccessful">Backup unsuccessful.</string>
	<string name="restoresuccessful">Restore successful</string>
	<string name="restoreunsuccessful">Restore unsuccessful.</string>
	<string name="location">Location</string>
    <string name="cant_read_folder">folder can\'t be read!</string>
    <string name="nnew">New</string>
    <string name="select">Select</string>
    <string name="file_name">File name:</string>
   	<string name="create">Save</string>
    <string name="no_data">No Data</string>
    <color name="gray">#ffff0000</color>
    <string name="err">Error</string>
    <string name="view">View</string>
    <string name="files">Files</string>
    <string name="videos">Videos</string>
    <string name="drawings">Drawings</string>
    <string name="memos">memos</string>
    <string name="ok">Ok</string>
    <string name="filecannotbeviewed">Sorry there is no application which can handle this type of files and hence it cannot be viewed in this device. </string>
</resources>