<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="match_parent"
	android:orientation="vertical">
	<RelativeLayout android:id="@+id/header"
		android:layout_width="fill_parent" android:layout_height="44dp"
		android:background="@drawable/blacktopbck">

		<Button android:id="@+id/back" android:layout_width="wrap_content" style="@style/Bluebutton"
			android:layout_height="wrap_content" android:layout_alignParentLeft="true"
			android:layout_centerVertical="true" android:layout_marginLeft="10dp" android:text="@string/back"
			android:background="@drawable/blackbtn" />

		<TextView android:id="@+id/header" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_centerInParent="true"
			android:text="@string/settings" style="@style/PageHeader" />
	</RelativeLayout>
	<LinearLayout android:id="@+id/linearLayout1"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:orientation="vertical" android:layout_marginTop="20dp">

		<RelativeLayout android:id="@+id/email"
			android:layout_width="fill_parent" android:layout_height="60dip"
			android:layout_marginLeft="15dip" android:layout_marginRight="15dip"
			android:layout_marginTop="15dip" android:background="@drawable/upimage">
			<ImageView android:id="@+id/imageView1"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_alignParentLeft="true" android:layout_centerVertical="true"
				android:layout_marginLeft="10dp" android:layout_marginTop="4dip"
				android:src="@drawable/emailhistory" />
			<TextView android:id="@+id/textView2" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_centerVertical="true"
				android:layout_marginLeft="10dp" android:layout_toRightOf="@+id/imageView1"
				android:text="@string/emailhist" android:textAppearance="?android:attr/textAppearanceLarge"
				android:textColor="#000000" android:textStyle="bold"
				android:textSize="16sp" />

		</RelativeLayout>
		<RelativeLayout android:id="@+id/delete"
			android:layout_width="fill_parent" android:layout_height="60dip"
			android:layout_marginLeft="15dip" android:layout_marginRight="15dip"
			android:background="@drawable/midal">
			<ImageView android:id="@+id/imageView1"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_alignParentLeft="true" android:layout_centerVertical="true"
				android:layout_marginLeft="10dp" android:layout_marginTop="4dip"
				android:src="@drawable/deleteset" />
			<TextView android:id="@+id/textView3" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_centerVertical="true"
				android:layout_marginLeft="10dp" android:layout_toRightOf="@+id/imageView1"
				android:text="@string/deletehist" android:textAppearance="?android:attr/textAppearanceLarge"
				android:textColor="#000000" android:textSize="16sp"
				android:textStyle="bold" />

		</RelativeLayout>
		<RelativeLayout android:id="@+id/passcode1"
			android:layout_width="fill_parent" android:layout_height="60dip"
			android:layout_marginLeft="15dip" android:layout_marginRight="15dip"
			android:background="@drawable/midal">

			<ImageView android:id="@+id/imageView1"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_alignParentLeft="true" android:layout_centerVertical="true"
				android:layout_marginLeft="10dp" android:layout_marginTop="4dip"
				android:src="@drawable/passlockset" />
			<TextView android:id="@+id/textView4" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_centerVertical="true"
				android:layout_marginLeft="10dp" android:layout_toRightOf="@+id/imageView1"
				android:text="@string/passhist" android:textColor="#000000"
				android:textStyle="bold" android:textSize="16sp"
				android:textAppearance="?android:attr/textAppearanceLarge" />
			<ImageView android:id="@+id/passcode"	
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_alignParentRight="true" android:layout_centerVertical="true"
				android:layout_marginRight="10dp" android:layout_marginTop="4dip"
				android:src="@drawable/onoff" />
		
		</RelativeLayout>
		<RelativeLayout android:id="@+id/rel_dropbox"
			android:layout_width="fill_parent" android:layout_height="60dip"
			android:layout_marginLeft="15dip" android:layout_marginRight="15dip"
			android:background="@drawable/midal">

			<ImageView android:id="@+id/imageView1"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_alignParentLeft="true" android:layout_centerVertical="true"
				android:layout_marginLeft="10dp" android:layout_marginTop="4dip"
				android:src="@drawable/dropboxset" />
			<TextView android:id="@+id/textView5" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_centerVertical="true"
				android:layout_marginLeft="10dp" android:layout_toRightOf="@+id/imageView1"
				android:text="@string/drophist" android:textAppearance="?android:attr/textAppearanceLarge"
				android:textColor="#000000" android:textSize="16sp"
				android:textStyle="bold" />
			<ImageView 	
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_alignParentRight="true" android:layout_centerVertical="true"
				android:layout_marginRight="10dp" android:layout_marginTop="4dip"
				android:src="@drawable/grey_icon" />
		</RelativeLayout>
		<RelativeLayout android:id="@+id/feedback"
			android:layout_width="fill_parent" android:layout_height="60dip"
			android:layout_marginLeft="15dip" android:layout_marginRight="15dip"
			android:background="@drawable/downimage">
			<ImageView android:id="@+id/imageView1"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_alignParentLeft="true" android:layout_centerVertical="true"
				android:layout_marginLeft="10dp" android:layout_marginTop="4dip"
				android:src="@drawable/feedbackset" />
			<TextView android:id="@+id/textView6" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_centerVertical="true"
				android:layout_marginLeft="10dp" android:layout_toRightOf="@+id/imageView1"
				android:text="@string/feedhist" android:textAppearance="?android:attr/textAppearanceLarge"
				android:textColor="#000000" android:textSize="16sp"
				android:textStyle="bold" />

		</RelativeLayout>

	</LinearLayout>

</LinearLayout>